respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Import_Export_Service_Line_Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Allocated_Service_Line_Currency__c</fullName>
        <formula>Amount__c * Conversion_Rate_to_Service_Line_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Allocated (Service Line Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_VAT__c</fullName>
        <formula>Disbursement__r.VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount Allocated</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_excl_VAT__c</fullName>
        <formula>Disbursement__r.Invoice_Amount_Exc__c</formula>
        <label>Amount excl VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_incl_VAT__c</fullName>
        <formula>Disbursement__r.Invoice_Amount_Inc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount incl. VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Amount__c</fullName>
        <formula>Import_Export_Service_Line__r.Buy_Amount__c</formula>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Service_Line_Currency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Service Line Currency</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursement_Concept__c</fullName>
        <formula>Disbursement__r.Disbursment_Concept__c</formula>
        <label>Disbursement Concept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement__c</fullName>
        <description>master-detail specifying reference number of disbursement where it will be applied</description>
        <label>Disbursement</label>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipLabel>Imp-Exp Service Lines / Disbursements</relationshipLabel>
        <relationshipName>Import_Export_Service_Line_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Import_Export_Service_Line__c</fullName>
        <description>master-detail specifying service line and IE Quote/Order reference number to apply to disbursement</description>
        <label>Import-Export Service Line</label>
        <referenceTo>Import_Export_Fee_Line__c</referenceTo>
        <relationshipLabel>Imp-Exp Service Lines / Disbursements</relationshipLabel>
        <relationshipName>Import_Export_Service_Line_Disbursement1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Disbursement__r.Invoice_Date__c</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>Import_Export_Service_Line__r.Disbursement_Outstanding_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>Disbursement__r.Payment_Amount__c</formula>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <formula>Disbursement__r.Payment_Date__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Ref__c</fullName>
        <formula>Disbursement__r.Payment_Ref__c</formula>
        <label>Payment Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Buy_Price__c</fullName>
        <formula>Import_Export_Service_Line__r.Quote_Buy_Price__c</formula>
        <label>Quote Buy Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Category__c</fullName>
        <formula>Import_Export_Service_Line__r.Service_Rate_Category__c</formula>
        <label>Rate Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Name__c</fullName>
        <formula>Import_Export_Service_Line__r.Service_Rate_Name__r.Name</formula>
        <label>Rate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>Import_Export_Service_Line__r.Rate_Type__c</formula>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <formula>Disbursement__r.Account__r.Name</formula>
        <label>Supplier Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Ref__c</fullName>
        <formula>Disbursement__r.Invoice_Ref__c</formula>
        <label>Supplier Invoice Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>Import_Export_Service_Line__r.Units__c</formula>
        <label>Units</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Imp-Exp Service Line/ Disbursement</label>
    <nameField>
        <label>IE Service Line/ Disbursement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imp-Exp Service Lines / Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>